fix: fix z-index issue with header

--- a/src/styles/blocks/header.css
+++ b/src/styles/blocks/header.css
@@ -21,6 +21,7 @@
 
 .header__nav.header__nav--open {
   display: block;
+  z-index: 1;
   position: absolute;
   top: 71px;
   left: 0;
